cabal-version:      2.4
name:               neorg
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Simon Reitinger
maintainer:

-- A copyright notice.
-- copyright:
category:           Text
extra-source-files: CHANGELOG.md

library
    exposed-modules:  
      Neorg.Parser
      Neorg.Parser.Document
      Neorg.Parser.Error
      Neorg.Parser.Paragraph
      Neorg.Parser.Base
      Neorg.Parser.Combinators
      Neorg.Parser.Block
      Neorg.Parser.Delimiter
      Neorg.Parser.Tag
      Neorg.Document

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
      base ^>=4.16.4.0,
      megaparsec,
      containers,
      vector,
      transformers,
      text,
      bytestring,
      parser-combinators,
      these
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions: OverloadedStrings, LambdaCase, DuplicateRecordFields

executable neorg
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        neorg,
        containers,
        transformers,
        bytestring,
        text,
        aeson,
        pandoc-types



    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions: OverloadedStrings, LambdaCase, TupleSections

test-suite neorg-test
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
      Paragraph
      Block
    build-depends:    base ^>=4.16.4.0, neorg, hspec, HUnit, text, these
    default-extensions: OverloadedStrings, LambdaCase
