cabal-version:      2.4
name:               neorg
version:            0.1.0.0
synopsis: Transform norg documents into PDFs with pandoc 
description: This package includes a parser for norg files as well as an AST for norg. In addition, the included executable can transform this AST into the pandoc AST. Norg files can be transformed to pandoc json which can then be transformed into the various formats that pandoc supports.
homepage: https://github.com/Simre1/neorg-haskell-parser
bug-reports: https://github.com/Simre1/neorg-haskell-parser
license:            MIT
license-file:       LICENSE
author:             Simon Reitinger
maintainer:         Simon Reitinger
copyright:          Simon Reitinger
category:           Text
extra-source-files: CHANGELOG.md

library
    exposed-modules:
      Neorg.Parser
      Neorg.Parser.Document
      Neorg.Parser.Error
      Neorg.Parser.Paragraph
      Neorg.Parser.Base
      Neorg.Parser.Combinators
      Neorg.Parser.Block
      Neorg.Parser.Delimiter
      Neorg.Parser.Tag
      Neorg.Document
      Neorg.SemanticAnalysis
    build-depends:
      base ^>=4.16.4.0,
      megaparsec ^>=9.3.0,
      containers,
      vector,
      transformers,
      text,
      bytestring,
      parser-combinators,
      optics-core
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions: OverloadedStrings, LambdaCase, DuplicateRecordFields, OverloadedLabels

executable neorg-pandoc
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        neorg,
        containers,
        transformers,
        bytestring,
        text,
        aeson,
        pandoc-types,
        optparse-applicative
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions: OverloadedStrings, LambdaCase, TupleSections

test-suite neorg-test
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
      Paragraph
      Block
    build-depends:    base ^>=4.16.4.0, neorg, hspec, HUnit, text, these
    default-extensions: OverloadedStrings, LambdaCase
