cabal-version:      2.4
name:               neorg
version:            0.2.0.0
synopsis: Transform norg documents into PDFs with pandoc 
description: This package includes a parser for norg files as well as an AST for norg. In addition, the included executable can transform this AST into the pandoc AST. Norg files can be transformed to pandoc json which can then be transformed into the various formats that pandoc supports.
homepage: https://github.com/Simre1/neorg-haskell-parser
bug-reports: https://github.com/Simre1/neorg-haskell-parser
license:            MIT
license-file:       LICENSE
author:             Simon Reitinger
maintainer:         Simon Reitinger
copyright:          Simon Reitinger
category:           Text
extra-source-files: CHANGELOG.md
tested-with: GHC ==9.2.5

source-repository head
  type: git
  location: https://github.com/Simre1/neorg-haskell-parser

common common
  ghc-options: -Wall
  default-language: GHC2021
  default-extensions: 
    OverloadedStrings,
    LambdaCase,
    DuplicateRecordFields,
    OverloadedLabels,
    TupleSections
  build-depends:
    base ^>=4.16.4.0,
    containers ^>=0.6,
    transformers ^>= 0.6.1,
    text ^>= 2.0,
    optics-core ^>= 0.4

library
    import: common
    exposed-modules:
      Neorg.Parser
      Neorg.Parser.Document
      Neorg.Parser.Paragraph
      Neorg.Parser.Base
      Neorg.Parser.Combinators
      Neorg.Parser.Block
      Neorg.Parser.Delimiter
      Neorg.Parser.Tag
      Neorg.Document
      Neorg.SemanticAnalysis
    build-depends:
      megaparsec ^>=9.3.0,
    hs-source-dirs:   src

executable neorg-pandoc
    import: common
    main-is:          Main.hs
    build-depends:
        neorg,
        bytestring ^>= 0.11.4,
        aeson ^>= 2.1.2,
        pandoc-types ^>= 1.23,
        optparse-applicative ^>= 0.17
    hs-source-dirs:   app

test-suite neorg-test
    import: common
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
      Paragraph
      Block
    build-depends:    
      base ^>=4.16.4.0,
      neorg,
      hspec ^>= 2.10,
      HUnit ^>= 1.6
